--- a/scss/home.scss
+++ b/scss/home.scss
@@ -21,6 +21,7 @@ main {
 		text-align: center;
 		margin-bottom: 0;
 		width: 100%;
+		height: 100%;
 		padding-top: 0.5em;
 		padding-bottom: 0.5em;
 
